fixed text alignment

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -20,6 +20,11 @@ main
   text-align: center;
 }
 
+#introduction_main
+{
+  text-align: left;
+}
+
 footer
 {
   text-align: center;
